Find Plateau By Id API's was added Refactoring Swagger Outputs
