# storage/api-docs/api-docs.json
@@ -13,25 +13,129 @@
         }
     ],
     "paths": {
-        "/test": {
-            "get": {
+        "/plateaus": {
+            "post": {
                 "tags": [
-                    "Projects"
+                    "Plateaus"
                 ],
-                "summary": "Get list of projects",
-                "description": "Returns list of projects",
-                "operationId": "getProjectsList",
+                "summary": "Create new plateau",
+                "description": "Create new plateau",
+                "operationId": "createPlateaus",
+                "requestBody": {
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StorePlateauRequest"
+                            }
+                        }
+                    }
+                },
                 "responses": {
-                    "200": {
-                        "description": "Successful operation"
+                    "201": {
+                        "description": "Successfully created"
                     },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
+                    "422": {
+                        "description": "Validation Error"
                     }
                 }
+            }
+        },
+        "/plateaus/{id}": {
+            "get": {
+                "tags": [
+                    "Plateaus"
+                ],
+                "summary": "Find a single plateau by id",
+                "description": "Returns a single plateau",
+                "operationId": "findPlateauById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Plateau Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "examples": {
+                            "int": {
+                                "summary": "An int value.",
+                                "value": "1"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PlateauResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "StorePlateauRequest": {
+                "properties": {
+                    "name": {
+                        "description": "name",
+                        "format": "string",
+                        "default": "plateau-10"
+                    },
+                    "x_coordinate": {
+                        "description": "email",
+                        "format": "string",
+                        "default": "27"
+                    },
+                    "y_coordinate": {
+                        "description": "y_coordinate",
+                        "format": "string",
+                        "default": "43"
+                    }
+                },
+                "type": "object"
+            },
+            "PlateauResource": {
+                "description": "Class PlateauResource",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "ID",
+                        "format": "int64",
+                        "default": 1
+                    },
+                    "name": {
+                        "title": "name",
+                        "description": "name",
+                        "format": "string",
+                        "default": "plateau-1"
+                    },
+                    "x_coordinate": {
+                        "title": "x_coordinate",
+                        "description": "x_coordinate",
+                        "format": "string",
+                        "default": "10"
+                    },
+                    "y_coordinate": {
+                        "title": "y_coordinate",
+                        "description": "y_coordinate",
+                        "format": "string",
+                        "default": "10"
+                    }
+                },
+                "type": "object"
+            }
+        },
+        "responses": {
+            "404": {
+                "description": "Not found"
             }
         }
     }
